assets/css/style.css
/* Google Fonts import */
@import url('https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500;600;700&display=swap');

/* Set global variables for colors */
:root {
    --brown: #4F200D;
    --yellow: #FFD93D;
    --white: #F6F1E9;
    --grey: #3D3B40;
    --black: #191919;
}

/* Overrides the default styles set by the browser */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Hind Vadodara', sans-serif;
    color: var(--black);
    background-color: var(--white);
    min-height: 100vh;
    flex-direction: column;
    display: flex;
}

/* Header */
header {
    background-color: var(--brown);
    padding: 1rem;
    position: fixed;
    z-index: 50;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    box-shadow: 0 0.5vh 1vh 0.5vh var(--grey);
    border-radius: 0 0 0 1vh;
}

/* Logo image */
header img {
    width: 100%;
    height: auto;
    max-width: 200px;
    padding: 5px 0 5px 5px;
}

a {
    text-decoration: none;
    color: var(--white);
}

li {
    list-style-type: none;
    color: var(--white);
    margin-top: 0.5vh;
}

/* Nav menu */
nav {
    position: absolute;
    background-color: var(--brown);
    width: auto;
    top: 100%;
    right: 0;
    padding: 0 1rem;
    display: none;
    box-shadow: 0 0.5vh 0.5vh 0.5vh var(--grey);
}

/* Hamburger icon */
.fa-bars {
    color: var(--white);
    font-size: 2rem;
}

/* Menu position */
.menu {
    float: right;
}

/* Menu style */
.menu>li {
    margin-bottom: 2vh;
    font-size: 2vh;
}

/* Toggle menu */
#side-menu:checked~nav {
    display: block;
    animation: menu-slide-left 0.3s ease;
}

/*Animation for toggle menu */
@keyframes menu-slide-left {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

/* Hide checkbox icon */
#side-menu {
    display: none;
}

/* Display active on the current page */
.active {
    background-color: var(--yellow);
    color: var(--black);
    padding: 0.5vh;
    border-radius: 0.5vh;
}

/* Video background for the landing home page */
video {
    top: 0;
    left: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    z-index: -1;
}

/* Main placeholder */
main {
    margin-top: 75px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1 0 auto;
}

/* Welcome message on the landing home page */
.welcome-message {
    /* Fallback for any browser without RGBA-support */
    background-color: var(--brown);
    /* Any browser with RGBA-support */
    background-color: rgba(79, 32, 13, 0.8);
    border-radius: 1vh;
    text-align: center;
    padding: 10% 20%;
    animation: fadeIn 2s;
}

/* Fade-in animation for welcome message on the landing page */
@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

/* Font style for welcome message */
.welcome-font-style {
    margin-bottom: 2vh;
    color: var(--white);
}

/* Style Explore button on the landing page */
#wlcm-button {
    background-color: var(--yellow);
    padding: 1vh;
    border-radius: 3vh;
    border: var(--black) solid 2px;
}

/* Font style for Explore button */
.visit-explore-btn {
    color: var(--black);
    font-size: 1rem;
}

.explore-container {
    margin: 1vh;
}

/* Explore Northeast section */
#explore-northeast {
    width: 98vw;
    margin: 2vh;
}

/* Seven sisters and one brother paragraph */
#seven-sis {
    /* Fallback for any browser without RGBA-support */
    background-color: var(--brown);
    /* Any browser with RGBA-support */
    background-color: rgba(79, 32, 13, 0.8);
    margin: 1vh;
    line-height: 2;
    border-radius: 2vh;
}

#seven-sis-ne {
    padding: 2vh;
    color: var(--white);
}

#seven-sis-ne h1 {
    text-align: center;
    font-size: 2rem;
}

#seven-sis-ne p {
    margin: 2vh;
    text-align: justify;
}

/* Seven sisters and one brother image */
#seven-sis-img {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2vh;
}

.seven-sis-pic {
    max-width: 95%;
}

/* Explore map section */
#explore-map {
    width: 98vw;
    margin: 2vh;
}

/* Map paragraph */
#seven-map {
    /* Fallback for any browser without RGBA-support */
    background-color: var(--brown);
    /* Any browser with RGBA-support */
    background-color: rgba(79, 32, 13, 0.8);
    margin: 1vh;
    line-height: 2;
    border-radius: 2vh;
}

#seven-map-ne {
    padding: 2vh;
    color: var(--white);
}

#seven-map-ne h1 {
    text-align: center;
    font-size: 2rem;
}

#seven-map-ne p {
    margin: 2vh;
    text-align: justify;
}

/* Map image */
#seven-map-img {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2vh;
}

.seven-map-pic {
    max-width: 95%;
}

/* Move the Travel button to center */
#travel-btn {
    text-align: center;
}

/* Style Travel button on the Explore page */
#travel-button {
    background-color: var(--yellow);
    padding: 1vh;
    border-radius: 3vh;
    border: var(--black) solid 2px;
}

/* Font style for Travel button */
.visit-travel-btn {
    color: var(--black);
    font-size: 1rem;
}

.travel-container {
    margin: 1vh;
}

/* Assam section */
#travel-assam {
    width: 98vw;
    margin: 2vh;
}

/* Assam paragraph */
#assam {
    /* Fallback for any browser without RGBA-support */
    background-color: var(--brown);
    /* Any browser with RGBA-support */
    background-color: rgba(79, 32, 13, 0.8);
    margin: 1vh;
    line-height: 2;
    border-radius: 2vh;
}

#assam-ne {
    padding: 2vh;
    color: var(--white);
}

#assam-ne h1 {
    text-align: center;
    font-size: 2rem;
}

#assam-ne p {
    margin: 2vh;
    text-align: justify;
}

#list-assam {
    margin: 2vh;
}

/* Assam image */
#assam-img {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2vh;
}

.assam-pic {
    max-width: 95%;
}

/* Meghalaya section */
#travel-meghalaya {
    width: 98;
    margin: 2vh;
}

/* Meghalaya paragraph */
#meghalaya {
    /* Fallback for any browser without RGBA-support */
    background-color: var(--brown);
    /* Any browser with RGBA-support */
    background-color: rgba(79, 32, 13, 0.8);
    margin: 1vh;
    line-height: 2;
    border-radius: 2vh;
}

#meghalaya-ne {
    padding: 2vh;
    color: var(--white);
}

#meghalaya-ne h1 {
    text-align: center;
    font-size: 2rem;
}

#meghalaya-ne p {
    margin: 2vh;
    text-align: justify;
}

#list-meghalaya {
    margin: 2vh;
}

/* Meghalaya image */
#meghalaya-img {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2vh;
}

.meghalaya-pic {
    max-width: 95%;
}

/* Footer */
footer {
    background-color: var(--brown);
    width: 100%;
    position: sticky;
}

footer p {
    color: var(--white);
    text-align: center;
}

#visit-socialm {
    font-weight: bold;
    font-size: 2vh;
}

#social-media {
    display: flex;
    padding: 1vh 1vh;
    text-align: center;
    justify-content: space-evenly;
}

#social-media i {
    font-size: 2.5vh;
    color: var(--white);
    padding: 0.5vh;
}

#copyright {
    font-weight: lighter;
    font-size: 1.5vh;
}

/* Media query for tablets and larger screens (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        width: fit-content;
        padding-right: 1rem;
        box-shadow: none;
        padding: 0.5vh;
    }

    .menu {
        display: flex;
    }

    .menu>li {
        padding-left: 1rem;
        font-size: 2vh;
    }

    .menu-toggle {
        display: none;
    }

    main {
        margin-top: 100px;
    }
}

/* Media query for larger devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {

    /* Navbar hover effect */
    .menu a:hover {
        background-color: var(--yellow);
        color: var(--black);
        border-radius: 0.5vh;
    }

    /* Landing page Explore button hover effect */
    #wlcm-button:hover {
        box-shadow: 3px 3px 6px 0px var(--yellow);
        background-color: var(--white);
        transform: scale(1.3);
    }

    /* Travel button hover effect */
    #travel-button:hover {
        box-shadow: 3px 3px 6px 0px var(--yellow);
        background-color: var(--white);
        transform: scale(1.3);
    }

    /* Social media icons footer hover effect */
    #social-media i:hover {
        background-color: var(--yellow);
        color: var(--black);
        padding: 0.5vh;
    }
}

/* Media query for larger screen size, 1200px and up) */
@media screen and (min-width: 1200px) {

    /* Wrap explore Northeast section*/
    #seven-sis {
        display: flex;
        flex-direction: row;
    }

    #seven-sis>div {
        flex: 1;
    }

    #seven-sis-img {
        order: 0;
    }

    /* Wrap explore Northeast section*/
    #seven-map {
        display: flex;
        flex-direction: row-reverse;
    }

    #seven-map>div {
        flex: 1;
    }

    #seven-map-img {
        order: 0;
    }

    /* Wrap Assam section*/
    #assam {
        display: flex;
        flex-direction: row-reverse;
    }

    #assam>div {
        flex: 1;
    }

    #assam-img {
        order: 0;
    }

    /* Wrap Meghalaya section*/
    #meghalaya {
        display: flex;
        flex-direction: row;
    }

    #meghalaya>div {
        flex: 1;
    }

    #meghalaya-img {
        order: 0;
    }
}

